reconfigured grover's algo

--- a/todo
+++ b/todo
@@ -1,2 +1,4 @@
+- disallow 111
 - handle entanglement (prepare both dishes in order to be ready)
 - hide indeces and replace with buttons?
+- time countdown bar
